# datalink-1200-python-grader

./: .gitignore  CLAUDE.md  README.md  extract_answers.py  grade_answers.py  make_templates.sh  neil_test.sh  pip_requirements.txt  pyproject.toml  register_scan.py  run_pipeline.py  source_me.sh
artifacts/: deep-research-report.md  target.odg  top_footprint.ods
config/: dl1200_template.yaml
docs/: BUBBLE_REFACTOR_EXECUTION_PLAN.md  CHANGELOG.md  CODE_ARCHITECTURE.md  FILE_STRUCTURE.md  INPUT_FORMATS.md  INSTALL.md  NCC_MASK_AB_EXPERIMENT_2.md  NCC_SOBEL_AB_EXPERIMENT.md  OMR_GEOMETRY_CONTRACT.md  OUTPUT_FORMATS.md  TROUBLESHOOTING.md  USAGE.md
omr_utils/: __init__.py  bubble_reader.py  bubble_template_extractor.py  csv_writer.py  debug_drawing.py  image_registration.py  slot_map.py  student_id_reader.py  template_builder.py  template_loader.py  template_matcher.py  template_refiner.py  timing_mark_anchors.py  timing_marks_left.py  timing_marks_top.py  xlsx_writer.py
tests/: conftest.py  test_bubble_reader.py  test_bubble_template_extractor.py  test_grade_answers.py  test_image_registration.py  test_pipeline_smoke.py  test_template_loader.py  test_template_matcher.py  test_template_refiner.py  test_timing_mark_anchors.py  test_xlsx_writer.py
tools/: build_bubble_templates.py  calibrate_bubble_geometry.py  diag_roi_centers.py  diag_roi_size.py  extract_bubble_templates.py  migrate_template_to_v2.py  refine_template_from_empty_fits.py
